--- a/NvCloth/samples/compiler/vc14win64-cmake/SampleBase.vcxproj
+++ b/NvCloth/samples/compiler/vc14win64-cmake/SampleBase.vcxproj
@@ -538,6 +538,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClInclude Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\CapsuleScene.h" />
     <ClInclude Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\CCDScene.h" />
     <ClInclude Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\CCDScene2.h" />
+    <ClInclude Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\ClothScene.h" />
     <ClInclude Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\MultiSolverScene.h" />
     <ClInclude Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\ScaledScene.h" />
     <ClInclude Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\TimeStepScene.h" />
@@ -605,6 +606,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClCompile Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\CapsuleScene.cpp" />
     <ClCompile Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\CCDScene.cpp" />
     <ClCompile Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\CCDScene2.cpp" />
+    <ClCompile Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\ClothScene.cpp" />
     <ClCompile Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\MultiSolverScene.cpp" />
     <ClCompile Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\ScaledScene.cpp" />
     <ClCompile Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\SampleBase\scene\scenes\TimeStepScene.cpp" />
@@ -625,11 +627,6 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClCompile Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\external\imgui\1.49\imgui.cpp" />
     <ClCompile Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\external\imgui\1.49\imgui_demo.cpp" />
     <ClCompile Include="C:\Users\wengold\Desktop\NvCloth\NvCloth\samples\external\imgui\1.49\imgui_draw.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="C:/Users/wengold/Desktop/NvCloth/NvCloth/samples/compiler/vc14win64-cmake/ZERO_CHECK.vcxproj">
-      <Project>69AD88E5-9627-3761-B245-DC88B2813218</Project>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
